--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,7 +317,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://i.ibb.co/TB5PDc7R/Whats-App-Image-2025-07-02-at-6-24-46-PM.jpg") top right;
+  background: url(https://i.ibb.co/TB5PDc7R/Whats-App-Image-2025-07-02-at-6-24-46-PM.jpg) top right;
   background-size: cover;
   position: relative;
 }
@@ -603,7 +603,7 @@ section {
 }
 
 .about .image {
-  background: url(" https://i.ibb.co/G47CC17s/Whats-App-Image-2025-07-02-at-1-59-10-PM.jpg ") center center no-repeat;
+  background: url(https://i.ibb.co/G47CC17s/Whats-App-Image-2025-07-02-at-1-59-10-PM.jpg) center center no-repeat;
   background-size: cover;
   min-height: 500px;
 }
@@ -766,7 +766,7 @@ section {
 --------------------------------------------------------------*/
 .testimonials {
   padding: 80px 0;
-  background: url("https://i.ibb.co/3YYsBvqk/Whats-App-Image-2025-07-02-at-2-00-42-PM.jpg") no-repeat;
+  background: url(https://i.ibb.co/3YYsBvqk/Whats-App-Image-2025-07-02-at-2-00-42-PM.jpg) no-repeat;
   background-position: center center;
   background-size: cover;
   position: relative;
@@ -1288,7 +1288,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url(" https://i.ibb.co/3y0BcYjb/Whats-App-Image-2025-07-02-at-5-04-20-PM.jpg") top center no-repeat;
+  background: url(https://i.ibb.co/3y0BcYjb/Whats-App-Image-2025-07-02-at-5-04-20-PM.jpg) top center no-repeat;
   background-size: cover;
   color: #fff;
   font-size: 14px;
