--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,7 @@ h6 {
   width: 100%;
   height: 100vh;
   /* background: url(https://i.ibb.co/TB5PDc7R/Whats-App-Image-2025-07-02-at-6-24-46-PM.jpg) top right; */
-  background: url(  https://i.ibb.co/yFp91B0x/Whats-App-Image-2025-07-02-at-2-01-20-PM.jpg);
+  background: url(  https://i.ibb.co/yFp91B0x/Whats-App-Image-2025-07-02-at-2-01-20-PM.jpg) center center no-repeat;
   background-size: cover;
   position: relative;
 }
