--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1290,7 +1290,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url(https://i.ibb.co/3y0BcYjb/Whats-App-Image-2025-07-02-at-5-04-20-PM.jpg) top center no-repeat;
+  background: url(https://i.ibb.co/3y0BcYjb/Whats-App-Image-2025-07-02-at-5-04-20-PM.jpg) center center no-repeat;
   background-size: cover;
   color: #fff;
   font-size: 14px;
